mochad-0.1.9

    * Add commands getstatus and getstatussec.
    getstatus <HU>          -- Get device HU on/off status
    getstatus <HU> xdim     -- Get device xdim status
    getstatusec <RFSECAddr> -- Get RF security device status such as DS10A.

    * Add port 1101 for OpenRemote 2.0. This is similar to port 1099 but does
    not include unsolicited event messages. OR polls for device events using
    getstatus and getstatussec.

mochad-0.1.8

    * Add support for X10 KR15A Big Red Button.
    * Allow '\r' as well as '\n' for line termination
    * Add more support for Flash XMLSocket clients including cross domain
    policy request and response for Chumby widgets. This is required to allow
    a Chumby widget to talk to mochad through an XMLSocket. Chumby widget
    should be released real soon now.
    * Add python-tk demo GUI application. Supports on and off buttons plus
    brighness slider using LM465 soft-start lamp modules. The slider will not
    work with older LM465 modules which lack soft-start. See apps/x10-tk.py.

mochad-0.1.7

    * Add Flash XMLSocket support on port 1100 for Chumby widgets.
    * Fix RF checksum problem when receiving from CM15A for house codes 9-16.

mochad-0.1.6

    * Add RF event filter to eliminate the flurry of duplicate events.
    This makes it much easier to write applications.
    * Skip extra leading 0x5D on received RF packets from CM15A.

mochad-0.1.5

    * Fix RFCAM command so it shows the transmit message.
    * Fix RF command which sent the wrong house in some cases. [ID: 3197002]

mochad-0.1.4

    * Fix RFCAM command so it takes house code as a parameter. For example,
    RFCAM C CAMUP sends a camera pan up command on house code C.
    Previously, RFCAM commands always used house code N. 

mochad-0.1.3

    * Change the method for sending dim/bright commands so it matches AHP
    The new method uses 3 bytes instead of 2. This seems to work better